fix movie title too long

--- a/src/app/components/movie-list/movie-list.component.scss
+++ b/src/app/components/movie-list/movie-list.component.scss
@@ -29,9 +29,16 @@ h2 {
     box-shadow: 0px 0px 10px #ccc;
   }
 
+  & h2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
-.hover-effect{
+.hover-effect {
   position: absolute;
   top: 0;
   left: 0;
@@ -39,7 +46,6 @@ h2 {
   width: 100%;
   z-index: -1;
 }
-
 
 .movie-info {
   padding-bottom: 5px;
